// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lane C golden — the phone (390 × 844 iOS) (a) /contract for the fixture job (no invitee email on file) 1`] = `
{
  "lines": 932,
  "sha256": "756f21dd36f87d77c866108be5f11532ca6ab436f29d9415e4c76d2e54cc8a23",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (b) /change-order, a new CO on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "f71367e829f260db281e38b106f966041101cda3903341c58e4e11c72f176a52",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (c) /estimate-wizard for a job that already has an estimate 1`] = `
{
  "lines": 434,
  "sha256": "cf5a935f37f28cee5db20219733228642b2fa06f927752ba4e00a2db4793f323",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (d) /smart-proposal for the fixture job 1`] = `
{
  "lines": 626,
  "sha256": "47ae90086905ff55cc2b72756aa220fb78e5adee439f0f5954b7396a23b6f859",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (e) /quick-quote 1`] = `
{
  "lines": 435,
  "sha256": "fa095eeb2c1976adf9b5b3083aa4d3fb8e53ab1fdde834f03e08f7ea8a18450e",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (f) /invoice, an overdue sent invoice 1`] = `
{
  "lines": 993,
  "sha256": "82d3a583bdda9dc9e6f4d002fe75c80f0645a7cbb4397618bf76e14efdb9df2c",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (g) /invoice, a paid invoice 1`] = `
{
  "lines": 928,
  "sha256": "2d6bc267e7eae87e74aaf3a0af2b97addb582fec9893cd07a84affd5ed136a9a",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (h) /invoice, a new invoice on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "bc95aaa7001a3fe76483a34f258b5bace6fc706d14770bb861312f0c11cc3bee",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (i) /payments with two overdue invoices 1`] = `
{
  "lines": 493,
  "sha256": "38caf3a4fa84c5254e6dab22b5dc3552a19b501882722b20bb4df79e696c2804",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (j) /lien-waivers for the fixture job 1`] = `
{
  "lines": 471,
  "sha256": "88174426e673f090252cd8e22ed2e4af464ccefbbfd84cf8c61825839090f96a",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (k) /sub-portal-setup for a sub on the fixture job 1`] = `
{
  "lines": 490,
  "sha256": "a8c6e64e5f807dd9ee73832612502d16ed811d5265e4f10e3080fcd51303cff7",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (l) /takeoff-estimate for the fixture job 1`] = `
{
  "lines": 347,
  "sha256": "af391697e5c8b9e67b87fd4e9a0cdff54a9fc1816ae727a45ba8529e3ca2426c",
}
`;
